--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </section>
         <section class="card" id="card3">
           <header class="card-header">
-            <img src="./images/image-daniel.jpg" alt="" />
+            <img src="./images/image-kira.jpg" alt="" />
             <div class="header-text">
               <h3>Kira Whittle</h3>
               <h3>Verified Graduate</h3>
@@ -83,7 +83,7 @@
         </section>
         <section class="card" id="card4">
           <header class="card-header">
-            <img src="./" alt="" />
+            <img src="./images/image-jeanette.jpg" alt="" />
             <div class="header-text">
               <h3>Jeanette Harmon</h3>
               <h3>Verified Graduate</h3>
@@ -97,7 +97,7 @@
         </section>
         <section class="card" id="card5">
           <header class="card-header">
-            <img src="./images/" alt="" />
+            <img src="./images/image-patrick.jpg" alt="" />
             <div class="header-text">
               <h3>Patrick Abrams</h3>
               <h3>Verified Graduate</h3>
